--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{ .Site.BaseURL }}">Home</a>
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}/about">About</a>
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}about">About</a>
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
